# nun

./: .gitignore  Cargo.toml  License.md  README.md  noortest.txt  nun-estedad.toml  nun-smcp.toml  nun.toml  الله نور السموت والارض.txt
lines/: ikhlas.txt  kursi.txt  kursi_space.txt  noor_harakat.txt
src/: config.rs  draw.rs  lib.rs  logic.rs  main.rs  outliner.rs  shaper.rs
texts/: hobbit.txt  kursi.txt  kursi_harakat.txt  noor.txt  noor_harakat.txt  qadr.txt  qul.txt  qul_no_basmala.txt  roboto_readme.txt
