[package]
name = "nun"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = " 0.2.26"
harfbuzz_rs = { git = "https://github.com/asibahi/harfbuzz_rs.git" }
hashbrown = "0.14.5"
# harfbuzz_rs = "2.0.1" # crates.io version
icu_segmenter = "1.4.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
] }
imageproc = "0.25"
itertools = "0.13"
pathfinding = "4.9.1"
resvg = "0.41.0"
kashida = { path = "../kashida/" } # local repo to allow for iteration

[lints.clippy]
filter_map_bool_then = "allow"
