[package]
name = "nun"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2"
harfbuzz_rs = "2.0.1" # crates.io version
hashbrown = "0.14.5"
rustybuzz = "0.14"
# rustybuzz = { git = "https://github.com/RazrFalcon/rustybuzz.git" }
icu_segmenter = "1.5"
image = { version = "0.25", default-features = false, features = [
	"png",
	"jpeg",
	"rayon",
] }
imageproc = "0.25"
itertools = "0.13"
pathfinding = "4.14"
resvg = { version = "0.42", default-features = false }
kashida = "0.0.7"
pico-args = "0.5.0"

[lints.clippy]
filter_map_bool_then = "allow"
